Fixes and Contrasting

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ body {
   align-items: center; }
 
 .jumbotron .container {
-  height: 80vh;
+  height: 70vh;
   text-align: center; }
   @media (max-width: 56.25em) {
     .jumbotron .container {
@@ -116,13 +116,13 @@ body {
   transition: 0.3s;
   color: black;
   padding: 0.5rem 1rem;
-  border: 3px solid black;
+  border: 3px solid rgba(20, 20, 20, 0.86);
   font-size: 1.25rem;
   text-transform: uppercase;
   text-decoration: none;
   transition: 0.3s; }
   .header__button:hover {
-    background: black;
+    background: rgba(20, 20, 20, 0.86);
     color: white;
     transform: translateY(-5px); }
 
