--- a/sass/components/_techbuttons.scss
+++ b/sass/components/_techbuttons.scss
@@ -9,14 +9,14 @@
   transition: 0.3s;
   color: black;
   padding: 0.5rem 1rem;
-  border: 3px solid black;
+  border: 3px solid rgba(20, 20, 20, 0.86);
   font-size: 1.25rem;
   text-transform: uppercase;
   text-decoration: none;
   transition: 0.3s;
 
   &:hover {
-    background: black;
+    background: rgba(20, 20, 20, 0.86);
     color: white;
     transform: translateY(-5px);
   }
